--- a/assets/sass/global/_states.scss
+++ b/assets/sass/global/_states.scss
@@ -3,11 +3,11 @@
 ----------------------------------------*/
 
 .is-active {
-	color: $white;
+	color: $black;
 }
 
 .is-inactive {
-	color: $dark-grey !important;
+	color: $light-grey !important;
 }
 
 .is-gold {
