--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -11,6 +11,7 @@
 @import "modules/typography";
 @import "modules/layout";
 @import "modules/sidebar";
+@import "modules/icons";
 
 // States
 @import "global/states"
