--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -200,8 +200,8 @@ a {
   padding-bottom: 2px;
   border-bottom: 1px solid #cfba95; }
   a:hover, a:focus {
-    color: #dfd1b8;
-    border-bottom: 1px solid #dfd1b8;
+    color: #bfa372;
+    border-bottom: 1px solid #bfa372;
     -moz-transition: all ease-in-out;
     -o-transition: all ease-in-out;
     -webkit-transition: all ease-in-out;
@@ -229,8 +229,8 @@ html {
 
 body {
   -webkit-text-size-adjust: 100%;
-  background-color: #050606;
-  color: #ffffff; }
+  background-color: #ffffff;
+  color: #050606; }
 
 img {
   display: block;
@@ -258,7 +258,6 @@ img {
   margin-left: auto;
   margin-right: auto;
   height: 100vh;
-  height: calc(100vh - 40px);
   overflow: scroll; }
   .container__content:after {
     content: " ";
@@ -292,11 +291,14 @@ img {
       width: 31%;
       width: calc(33.333% - 20px); } }
 
-@media (min-width: 1024px) {
-  .content {
-    width: 83.05085%;
-    float: right;
-    margin-right: 0; } }
+.content {
+  padding-top: 88px; }
+  @media (min-width: 1024px) {
+    .content {
+      width: 70.83333%;
+      float: right;
+      margin-left: 2.08333%;
+      margin-right: 2.08333%; } }
 
 .content__navigation {
   letter-spacing: 1px;
@@ -311,7 +313,7 @@ img {
     border-bottom: none;
     color: #A9A9A9; }
     .content__navigation a:hover {
-      color: #ffffff;
+      color: #050606;
       -moz-transition: color 0.15s ease-in-out;
       -o-transition: color 0.15s ease-in-out;
       -webkit-transition: color 0.15s ease-in-out;
@@ -326,121 +328,78 @@ img {
     float: left;
     height: 100%;
     width: 0%;
-    background-color: #A9A9A9;
-    -moz-transition: width 0.75s ease-in-out;
-    -o-transition: width 0.75s ease-in-out;
-    -webkit-transition: width 0.75s ease-in-out;
-    transition: width 0.75s ease-in-out; }
+    background-color: #A9A9A9; }
+
+.content--home {
+  padding-top: 40px; }
 
 .content--services .accordion {
   width: 97%;
-  width: calc(100% - 20px); }
-.content--services .transition, .content--services p, .content--services ul li i:before, .content--services ul li i:after {
-  transition: all 0.25s ease-in-out; }
-.content--services .flipIn, .content--services ul li {
-  animation: flipdown 0.5s ease both; }
-.content--services .no-select, .content--services h3 {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
+  width: calc(100% - 20px);
+  overflow: hidden; }
+.content--services .accordion__title {
+  border-bottom: 1px solid #D3D3D3; }
+  .content--services .accordion__title h2 {
+    font-size: 2.75em;
+    margin-bottom: 20px; }
+  .content--services .accordion__title a {
+    float: right;
+    font-size: 1.25em;
+    margin-top: 2.5em;
+    margin-right: 10px;
+    border-bottom: none;
+    padding-bottom: 0px; }
+.content--services .accordion__section--title {
+  width: 100%;
+  padding: 20px 0;
+  display: inline-block;
+  border-bottom: 1px solid #D3D3D3;
+  font-family: "sofia-pro", "Helvetica Neue", "Helvetica", sans-serif;
+  color: #050606;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: normal;
+  font-size: 2em;
+  margin: 0; }
+  .content--services .accordion__section--title.active {
+    border-bottom: none;
+    padding: 20px 0 5px 0; }
+.content--services .accordion__content {
+  display: none;
+  padding-bottom: 20px; }
+.content--services .accordion__content p {
+  border-left: #cfba95 5px solid;
+  padding-left: 20px; }
+.content--services .accordion__section {
+  position: relative; }
+.content--services .accordion__section i {
+  position: absolute;
+  top: 30px;
+  right: 20px; }
+  .content--services .accordion__section i:before, .content--services .accordion__section i:after {
+    content: "";
+    position: absolute;
+    background-color: #050606;
+    width: 3px;
+    height: 9px; }
+  .content--services .accordion__section i:before {
+    transform: translate(-2px, 0) rotate(45deg); }
+  .content--services .accordion__section i:after {
+    transform: translate(2px, 0) rotate(-45deg); }
+.content--services .accordion__content {
+  border-bottom: none; }
+  .content--services .accordion__content.open {
+    border-bottom: 1px solid #D3D3D3; }
+.content--services .accordion__content.open ~ i:before {
+  transform: translate(2px, 0) rotate(45deg); }
+.content--services .accordion__content.open ~ i:after {
+  transform: translate(-2px, 0) rotate(-45deg); }
 .content--services h2 {
   letter-spacing: 2px;
   text-transform: uppercase;
-  margin-bottom: 1em; }
-.content--services h3 {
-  letter-spacing: 1px;
-  text-transform: normal;
-  font-size: 1.75em;
-  display: block;
-  margin: 0;
-  cursor: pointer; }
-.content--services p {
-  padding-left: 20px;
-  border-left: #cfba95 5px solid;
-  position: relative;
-  overflow: hidden;
-  max-height: 800px;
-  opacity: 1;
-  transform: translate(0, 0);
-  margin-top: 14px;
-  z-index: 2; }
-.content--services ul {
-  list-style: none;
-  perspective: 900;
-  padding: 0;
-  margin: 0; }
-.content--services ul li {
-  position: relative;
-  padding: 0;
-  margin: 0;
-  padding-bottom: 4px;
-  padding-top: 18px;
-  border-top: 1px solid #696969; }
-.content--services ul li:nth-of-type(1) {
-  animation-delay: 0.5s; }
-.content--services ul li:nth-of-type(2) {
-  animation-delay: 0.75s; }
-.content--services ul li:nth-of-type(3) {
-  animation-delay: 1s; }
-.content--services ul li:nth-of-type(4) {
-  animation-delay: 1.25s; }
-.content--services ul li:nth-of-type(5) {
-  animation-delay: 1.5s; }
-.content--services ul li:last-of-type {
-  padding-bottom: 0; }
-.content--services ul li i {
-  position: absolute;
-  transform: translate(-20px, -3px);
-  margin-top: 16px;
-  right: 0; }
-.content--services ul li i:before, .content--services ul li i:after {
-  content: "";
-  position: absolute;
-  background-color: #ffffff;
-  width: 3px;
-  height: 9px; }
-.content--services ul li i:before {
-  transform: translate(-2px, 0) rotate(45deg); }
-.content--services ul li i:after {
-  transform: translate(2px, 0) rotate(-45deg); }
-.content--services ul li input[type=checkbox], .content--services ul li .contact__form textarea[type=checkbox], .contact__form .content--services ul li textarea[type=checkbox] {
-  position: absolute;
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  opacity: 0; }
-.content--services ul li input[type=checkbox]:checked ~ p, .content--services ul li .contact__form textarea[type=checkbox]:checked ~ p, .contact__form .content--services ul li textarea[type=checkbox]:checked ~ p {
-  margin-top: 0;
-  max-height: 0;
-  opacity: 0;
-  transform: translate(0, 50%); }
-.content--services ul li input[type=checkbox]:checked ~ i:before, .content--services ul li .contact__form textarea[type=checkbox]:checked ~ i:before, .contact__form .content--services ul li textarea[type=checkbox]:checked ~ i:before {
-  transform: translate(2px, 0) rotate(45deg); }
-.content--services ul li input[type=checkbox]:checked ~ i:after, .content--services ul li .contact__form textarea[type=checkbox]:checked ~ i:after, .contact__form .content--services ul li textarea[type=checkbox]:checked ~ i:after {
-  transform: translate(-2px, 0) rotate(-45deg); }
-@keyframes flipdown {
-  0% {
-    opacity: 0;
-    transform-origin: top center;
-    transform: rotateX(-90deg); }
-  5% {
-    opacity: 1; }
-  80% {
-    transform: rotateX(8deg); }
-  83% {
-    transform: rotateX(6deg); }
-  92% {
-    transform: rotateX(-3deg); }
-  100% {
-    transform-origin: top center;
-    transform: rotateX(0deg); } }
-#about {
-  background-image: url("../img/home-bg.jpg"); }
+  font-size: 2em;
+  margin-bottom: 1em;
+  display: inline-block; }
 
 @media (min-width: 1024px) {
   .content--about img {
@@ -486,7 +445,7 @@ img {
     max-width: 95%;
     max-width: calc(100% - 20px);
     margin-bottom: 2em;
-    border: 1px #ffffff solid;
+    border: 1px #D3D3D3 solid;
     padding: 10px 15px; }
     @media (min-width: 768px) {
       .contact__form input, .contact__form textarea {
@@ -495,7 +454,7 @@ img {
         max-width: 200px; } }
     .contact__form input:focus, .contact__form textarea:focus, .contact__form input:active, .contact__form textarea:active {
       outline: none;
-      border: 1px #ea1e31 solid;
+      border: 1px #A9A9A9 solid;
       -moz-transition: border 0.3s ease-in-out;
       -o-transition: border 0.3s ease-in-out;
       -webkit-transition: border 0.3s ease-in-out;
@@ -548,12 +507,15 @@ img {
 /*----------------------------------------
   #SIDEBAR
 ----------------------------------------*/
-@media (min-width: 1024px) {
-  .sidebar {
-    position: fixed;
-    width: 15.25424%;
-    float: left;
-    margin-right: 1.69492%; } }
+.sidebar {
+  padding-top: 20px; }
+  @media (min-width: 1024px) {
+    .sidebar {
+      position: fixed;
+      width: 20.83333%;
+      float: left;
+      margin-left: 2.08333%;
+      margin-right: 2.08333%; } }
 
 header {
   margin: 2em; }
@@ -567,11 +529,11 @@ header {
   width: 80px;
   border-bottom: none;
   padding-bottom: 0;
-  background-image: url('/codec/assets/img/logo.png?1447233971'); }
+  background-image: url('/assets/img/logo.png?1447233971'); }
   @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
     .header__logo a {
       /* on retina, use image that's scaled by 2 */
-      background-image: url('/codec/assets/img/logo-2x.png?1447233971');
+      background-image: url('/assets/img/logo-2x.png?1447233971');
       background-size: 80px 80px; } }
 
 nav {
@@ -588,18 +550,60 @@ nav ul {
     border-bottom: none;
     margin-bottom: 1.5em;
     color: #A9A9A9; }
-    nav ul a:hover {
+    nav ul a:hover, nav ul a:focus {
       border-bottom: none;
-      color: #ffffff; }
+      color: #050606; }
+
+.square {
+  width: 30px;
+  height: 30px;
+  background: transparent;
+  position: relative;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #000; }
+
+.plus, .minus {
+  width: 30px;
+  height: 30px;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  line-height: 32px;
+  text-align: center;
+  -webkit-transition: .5s all ease-out;
+  transition: .5s all ease-out; }
+
+.plus {
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg); }
+
+.square:hover .plus {
+  opacity: 0;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg); }
+
+.minus {
+  opacity: 0;
+  -webkit-transform: rotate(-90deg);
+  transform: rotate(-90deg); }
+
+.square:hover .minus {
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg); }
 
 /*----------------------------------------
   #STATES
 ----------------------------------------*/
 .is-active {
-  color: #ffffff; }
+  color: #050606; }
 
 .is-inactive {
-  color: #696969 !important; }
+  color: #D3D3D3 !important; }
 
 .is-gold {
   color: #cfba95; }
