--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -241,6 +241,10 @@ img {
   border-style: solid;
   height: auto; }
 
+.container {
+  overflow: auto;
+  -webkit-overflow-scrolling: touch; }
+
 .content--services img, .content--about img {
   width: 100%;
   max-width: 95%;
@@ -529,11 +533,11 @@ header {
   width: 80px;
   border-bottom: none;
   padding-bottom: 0;
-  background-image: url('/assets/img/logo.png?1447233971'); }
+  background-image: url('/codec/assets/img/logo.png?1447233971'); }
   @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
     .header__logo a {
       /* on retina, use image that's scaled by 2 */
-      background-image: url('/assets/img/logo-2x.png?1447233971');
+      background-image: url('/codec/assets/img/logo-2x.png?1447233971');
       background-size: 80px 80px; } }
 
 nav {
