--- a/assets/sass/modules/_layout.scss
+++ b/assets/sass/modules/_layout.scss
@@ -37,6 +37,11 @@ img {
 	height: auto;
 }
 
+.container {
+    overflow:auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 %responsive-w-border {
 	width: 100%;
 	max-width: 95%;
