--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -208,8 +208,8 @@ a {
     transition: all ease-in-out; }
 
 .small-text, .content__navigation, nav ul {
-  font-size: 12px;
-  font-size: 1.2rem;
+  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 200; }
 
 /*----------------------------------------
@@ -296,7 +296,7 @@ img {
       width: calc(33.333% - 20px); } }
 
 .content {
-  padding-top: 88px; }
+  padding-top: 78px; }
   @media (min-width: 1024px) {
     .content {
       width: 70.83333%;
@@ -305,8 +305,8 @@ img {
       margin-right: 2.08333%; } }
 
 .content__navigation {
-  letter-spacing: 1px;
-  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  text-transform: normal;
   color: #A9A9A9;
   font-family: "sofia-pro", "Helvetica Neue", "Helvetica", sans-serif;
   padding-bottom: 1em;
@@ -533,11 +533,11 @@ header {
   width: 80px;
   border-bottom: none;
   padding-bottom: 0;
-  background-image: url('/codec/assets/img/logo.png?1447233971'); }
+  background-image: url('/assets/img/logo.png?1447233971'); }
   @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
     .header__logo a {
       /* on retina, use image that's scaled by 2 */
-      background-image: url('/codec/assets/img/logo-2x.png?1447233971');
+      background-image: url('/assets/img/logo-2x.png?1447233971');
       background-size: 80px 80px; } }
 
 nav {
@@ -545,8 +545,8 @@ nav {
   margin: 2em; }
 
 nav ul {
-  letter-spacing: 2px;
-  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-transform: normal;
   font-family: "sofia-pro", "Helvetica Neue", "Helvetica", sans-serif;
   color: #D3D3D3; }
   nav ul a {
