--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -191,8 +191,8 @@ h4 {
 p {
   font-family: "ltc-bodoni-175", "Georgia", serif;
   font-weight: 200;
-  font-size: 16px;
-  font-size: 1.6rem; }
+  font-size: 18px;
+  font-size: 1.8rem; }
 
 a {
   text-decoration: none;
@@ -533,11 +533,11 @@ header {
   width: 80px;
   border-bottom: none;
   padding-bottom: 0;
-  background-image: url('/assets/img/logo.png?1447233971'); }
+  background-image: url('/codec/assets/img/logo.png?1447233971'); }
   @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
     .header__logo a {
       /* on retina, use image that's scaled by 2 */
-      background-image: url('/assets/img/logo-2x.png?1447233971');
+      background-image: url('/codec/assets/img/logo-2x.png?1447233971');
       background-size: 80px 80px; } }
 
 nav {
